RESOLVED FIXED312537
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-wrap-flexing-002.html -003.html
https://bugs.webkit.org/show_bug.cgi?id=312537
Summary [Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-wrap-...
alan
Reported 2026-04-16 20:05:34 PDT
ssia
Attachments
Patch (9.74 KB, patch)
2026-04-17 05:17 PDT, alan
no flags
Patch (9.74 KB, patch)
2026-04-17 06:58 PDT, alan
no flags
[fast-cq]Patch (10.65 KB, patch)
2026-04-17 07:20 PDT, alan
no flags
alan
Comment 1 2026-04-17 05:17:44 PDT
alan
Comment 2 2026-04-17 06:58:59 PDT
alan
Comment 3 2026-04-17 07:20:20 PDT
Created attachment 479132 [details] [fast-cq]Patch
EWS
Comment 4 2026-04-17 08:41:52 PDT
Committed 311456@main (815aeeda6a95): <https://commits.webkit.org/311456@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479132 [details].
Radar WebKit Bug Importer
Comment 5 2026-04-17 08:42:13 PDT
Sammy Gill
Comment 6 2026-04-18 19:05:08 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59332
Note You need to log in before you can comment on or make changes to this bug.